# occlusion-modeling

./: README.md  dev.ipynb  main.py  pixel_visibility.ipynb  pyproject.toml
src/: utils.py
src/trast/: README.md  __init__.py  core.py
